--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@firebase/auth": "^1.10.7",
+    "axios": "^1.10.0",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
+    "lucide-react": "^0.516.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
