--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.516.0",
+    "mini-css-extract-plugin": "^2.9.3",
     "next": "latest",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
