--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@firebase/auth": "^1.10.7",
     "axios": "^1.10.0",
     "dexie": "^4.2.0",
+    "dompurify": "^3.2.6",
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.516.0",
